@@ -94,6 +94,9 @@ Release 0.92.2 - Unreleased
    HBASE-6392  UnknownRegionException blocks hbck from sideline big overlap regions
    HBASE-6319  ReplicationSource can call terminate on itself and deadlock
    HBASE-6325  [replication] Race in ReplicationSourceManager.init can initiate a failover even if the node is alive
+   HBASE-6447  Common TestZooKeeper failures on jenkins: testMasterSessionExpired and testCreateSilentIsReallySilent
+   HBASE-6450  HBase startup should be with MALLOC_MAX_ARENA set
+   HBASE-6334  TestImprovement for TestHRegion.testWritesWhileGetting (Gregory Chanan)
 
 
   IMPROVEMENTS
